feat: form action button to iniciar

--- a/cadastro.html
+++ b/cadastro.html
@@ -14,7 +14,7 @@
 
   <body>
 
-    <form class="form_cadastro">
+    <form class="form_cadastro" action="iniciar.html" method="get">
 
       <p>Cadastre-se</p>
 
@@ -54,7 +54,7 @@
       </div>
 
 
-      <button class="cadastro"><span class="cadastro_texto">Cadastrar</span></button>
+      <button class="cadastro" type="submit"><span class="cadastro_texto">Cadastrar</span></button>
 
     </form>
 
