fix: historico validator

--- a/historico.html
+++ b/historico.html
@@ -25,7 +25,7 @@
     <div class="logo">
         <img src="imagens/historico2.png" alt="Histórico">
     </div>
-    <section>
+    <div class="section">
 
         <div class="select-game-mode">
             <p>
@@ -103,25 +103,12 @@
                     <img src="imagens/seta-baixo.png" alt="ícone seta" class="seta">
                 </div>
             </div>
-            <!-- ----------------------------------------------- -->
+            <!-- fim da lista -->
         </div>
 
-    </section>
+    </div>
 
     <button onclick="goBack()">Voltar</button>
-
-
-    <!-- TODO: componente histórico-->
-
-    <!-- <div class="logo logo-historico3">
-            <img src="imagens/historico3.png" alt="Histórico Tabela">
-        </div>
-
-        <form action="iniciar.html">
-
-            <button type="submit" class="login"><span class="login_texto">Voltar</span></button>
-
-        </form> -->
 
 </body>
 
