--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="info_usuario">
 
             <p><a href="cadastro.html" target="_blank">Cadastre-se</a></p>
-            <p>Esqueceu a senha?</p>
+            <p><a href="senha.html" target="_blank">Esqueceu a senha?</a></p>
 
         </div>
 
