password screen update and change password

--- a/senha.html
+++ b/senha.html
@@ -16,10 +16,10 @@
     <div class="section">
         <p>Preencha o dado abaixo para solicitar a recuperação de senha.</p>
         <p><b>Seu Username ou CPF cadastrado</b></p>
-        <input class="form_campo" type="text">
+        <input class="form_campo" type="text" placeholder="Digite seu email ou CPF">
         <p>Você irá receber um e-mail no endereço cadastrado contendo o procedimento para criar uma nova senha para esse usuário</p>
         
-        <button class="recuperar">Recuperar senha</button>
+        <button class="recuperar" onclick="window.location.href='alterarsenha.html'"><span class="recuperar_texto">Recuperar senha</span></button>
         <button class="cancelar" onclick="window.location.href='index.html'">Cancelar</button>
     </div>
     
