changing: font familly do subtitulo e gap da section

--- a/alterarsenha.html
+++ b/alterarsenha.html
@@ -16,7 +16,7 @@
         <p class="titulo">Alterar Senha</p>
         <div class="section">
             <p class="subtitulo">Nova Senha</p>
-            <input class="form_campo" type="password" placeholder="Digite sua nova senha">
+            <input class="form_campo" type="password" placeholder="Digite sua nova senha"><br>
             <p class="subtitulo">Confirmar Senha</p>
             <input class="form_campo" type="password" placeholder="Confirme sua nova senha">
         <form action="index.html">
