Changing: font family e remove button cancelar

--- a/senha.html
+++ b/senha.html
@@ -14,13 +14,13 @@
 <body>
     <p class="titulo">Redefinir senha</p>
     <div class="section">
-        <p>Preencha o dado abaixo para solicitar a recuperação de senha.</p>
-        <p><b>Seu Username ou CPF cadastrado</b></p>
+        <p class="text-biginfo">Preencha o dado abaixo para solicitar a recuperação de senha.</p>
+        <p class="text-info">Seu Username ou CPF cadastrado</p>
         <input class="form_campo" type="text" placeholder="Digite seu Username ou CPF">
-        <p>Você irá receber um e-mail no endereço cadastrado contendo o procedimento para criar uma nova senha para esse usuário</p>
+        <p class="text-info">Você irá receber um e-mail no endereço cadastrado contendo o procedimento para criar uma nova senha para esse usuário</p>
         
         <button class="recuperar" onclick="window.location.href='alterarsenha.html'"><span class="recuperar_texto">Recuperar senha</span></button>
-        <button class="cancelar" onclick="window.location.href='index.html'">Cancelar</button>
+        <p class="cancelar" onclick="window.location.href='index.html'">CANCELAR</p>
     </div>
     
 </body>
