fix: ajustes iniciar

--- a/iniciar.html
+++ b/iniciar.html
@@ -15,6 +15,9 @@
         function goBack() {
             window.location.href = 'index.html';
         }
+        function startGame() {
+            window.location.href = 'partida.html';
+        }
     </script>
 </head>
 
@@ -77,7 +80,7 @@
                         </div>
                     </div>
                     <div class="bora-comecar">
-                        <button class="start-game-button" type="button"><span class="start-game-text">Iniciar Jogo</span></button>
+                        <button class="start-game-button" type="button" onclick="startGame()"><span class="start-game-text">Iniciar Jogo</span></button>
                     </div>
                     
                 </div>
