--- a/iniciar.html
+++ b/iniciar.html
@@ -52,42 +52,44 @@
             </a>
         </div>
 
-        <div class="settings">
 
-            <div class="game-settings-container">
 
-                <div class="area_iniciar">
+        <div class="game-settings-container">
 
-                    <div class="item-iniciar">
-                        <span class="perfil_texto">Dimensão</span>
-                        <span class="simbolo_menos">-</span><input type="range" min="10" max="100" value="10"><span
-                            class="simbolo_mais">+</span>
-                    </div>
+            <div class="area_iniciar">
 
-                    <div class="item-iniciar">
-                        <span class="perfil_texto">N° Bombas</span>
-                        <span class="simbolo_menos">-</span><input type="range" min="10" max="100" value="10"><span
-                            class="simbolo_mais">+</span>
-                    </div>
-
-                    <div class="item-iniciar">
-                        <span class="perfil_texto">Modalidade</span>
-                        <div class="selection-mode">
-                            <!-- TODO: arrumar classe yellow. Está diferente apenas para demonstração-->
-                            <button class="game-mode-yellow" type="button"><span class="game-mode-text">Normal</span></button>
-                            <button class="game-mode" type="button"><span class="game-mode-text">Rivotril</span></button>
-                            <button class="game-mode" type="button"><span class="game-mode-text">Rankeada</span></button>
-                        </div>
-                    </div>
-                    <div class="bora-comecar">
-                        <button class="start-game-button" type="button" onclick="startGame()"><span class="start-game-text">Iniciar Jogo</span></button>
-                    </div>
-                    
+                <div class="item-iniciar">
+                    <span class="perfil_texto">Dimensão</span>
+                    <span class="simbolo_menos">-</span><input type="range" min="10" max="100" value="10"><span
+                        class="simbolo_mais">+</span>
                 </div>
+
+                <div class="item-iniciar">
+                    <span class="perfil_texto">N° Bombas</span>
+                    <span class="simbolo_menos">-</span><input type="range" min="10" max="100" value="10"><span
+                        class="simbolo_mais">+</span>
+                </div>
+
+                <div class="item-iniciar">
+                    <span class="perfil_texto">Modalidade</span>
+                    <div class="selection-mode">
+                        <!-- TODO: arrumar classe yellow. Está diferente apenas para demonstração-->
+                        <button class="game-mode-yellow" type="button"><span
+                                class="game-mode-text">Normal</span></button>
+                        <button class="game-mode" type="button"><span class="game-mode-text">Rivotril</span></button>
+                        <button class="game-mode" type="button"><span class="game-mode-text">Rankeada</span></button>
+                    </div>
+                </div>
+                <div class="bora-comecar">
+                    <button class="start-game-button" type="button" onclick="startGame()"><span
+                            class="start-game-text">Iniciar Jogo</span></button>
+                </div>
+
+
 
             </div>
         </div>
-    </div> 
+    </div>
 
 </body>
 
