feat: dinamic list ranking

--- a/ranking.html
+++ b/ranking.html
@@ -17,22 +17,19 @@
                 window.location.href = 'iniciar.html';
             }
         </script>
+       
     </head>
 
-    <body>
+    <body id="ranking">
 
         <div class="title">
             <p class="title-text">Ranking</p>
         </div>
-
-        <div class="ranking-tabela">
-            <img class="tabela" src="imagens/ranking3.png" alt="Ranking Tabela">
-        </div>
-
+        <div class="container"></div>
 
         <button type="button" class="iniciar" onclick="goBack()"><span class="iniciar-text">Voltar</span></button>
 
-
+        <script src="./src/ranking.js"></script>
     </body>
 
 </html>
