alterações: login e senha

--- a/senha.html
+++ b/senha.html
@@ -15,13 +15,14 @@
     <p class="titulo">Redefinir senha</p>
     <div class="section">
         <p class="text-biginfo">Preencha o dado abaixo para solicitar a recuperação de senha.</p>
-        <p class="text-info">Seu Username ou CPF cadastrado</p>
+        <p class="text-info">CPF cadastrado</p>
         <input class="form_campo" type="text" placeholder="Digite seu Username ou CPF">
         <p class="text-info">Você irá receber um e-mail no endereço cadastrado contendo o procedimento para criar uma nova senha para esse usuário</p>
         
-        <button class="recuperar" onclick="window.location.href='alterarsenha.html'"><span class="recuperar_texto">Recuperar senha</span></button>
+        <button class="recuperar"><span class="recuperar_texto">Recuperar senha</span></button>
         <p class="cancelar" onclick="window.location.href='index.html'">CANCELAR</p>
     </div>
     
+    <script src="src/senha.js"></script>
 </body>
 </html>
