--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         <link rel="stylesheet" type="text/css" href="estilo/login.css">
         <script src="https://kit.fontawesome.com/5da4b5c12f.js" crossorigin="anonymous"></script>
+       
+
     </head>
 
     <body>
@@ -25,11 +27,11 @@
 
             <p>Iniciar sessão</p> <br>
             
-            <i class="fa-solid fa-user" id="campo_login1"> <span class="campo_texto">Username</span></i>
-            <input class="form_campo" type="text"> <br>
+            <i class="fa-solid fa-user"> <span class="campo_texto">Username</span></i>
+            <input id="username" class="form_campo" type="text"> <br>
 
-            <i class="fa-solid fa-lock" id="campo_login2"> <span class="campo_texto">Senha</span></i>
-            <input class="form_campo" type="password"> <br>
+            <i class="fa-solid fa-lock"> <span class="campo_texto">Senha</span></i>
+            <input id="password" class="form_campo" type="password"> <br>
 
             <button type="submit" class="login"><span class="login_texto">Entrar</span></button>
 
@@ -42,6 +44,8 @@
             <p><a href="senha.html" target="_blank">Esqueceu a senha?</a></p>
 
         </div>
+
+        <script src="src/login.js"></script>
 
     </body>
 
