--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Road+Rage&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="estilo/cadastro.css">
-    <script src="https://kit.fontawesome.com/5da4b5c12f.js" crossorigin="anonymous"></script>
+    
   </head>
 
   <body>
@@ -19,45 +19,45 @@
       <p>Cadastre-se</p>
 
       <div>
-        <i class="fa-solid fa-user" id="campo_login1"> <span class="campo_texto"> Nome completo</span></i>
-        <input class="form_campo" type="text"> <br>
+        <i class="fa-solid fa-user"> <span class="campo_texto"> Nome completo</span></i>
+        <input class="form_campo" type="text" id="nome"> <br>
       </div>
 
       <div>
-        <i class="fa-regular fa-calendar-days" id="campo_login2"> <span class="campo_texto"> Data de nascimento</span></i>
-        <input class="form_campo" type="date"> <br>
+        <i class="fa-regular fa-calendar-days"> <span class="campo_texto"> Data de nascimento</span></i>
+        <input class="form_campo" type="date" id="dataNasc"> <br>
       </div>
 
       <div>
-        <i class="fa-solid fa-file-signature" id="campo_login3"> <span class="campo_texto"> CPF</span></i>
-        <input class="form_campo" type="text"> <br>
+        <i class="fa-solid fa-file-signature"> <span class="campo_texto"> CPF</span></i>
+        <input class="form_campo" type="text" id="cpf"> <br>
       </div>
 
       <div>
-        <i class="fa-solid fa-phone" id="campo_login4"> <span class="campo_texto"> Telefone</span></i>
-        <input class="form_campo" type="tel"> <br>
+        <i class="fa-solid fa-phone"> <span class="campo_texto"> Telefone</span></i>
+        <input class="form_campo" type="tel" id="telefone"> <br>
       </div>
 
       <div>
-        <i class="fa-solid fa-envelope" id="campo_login5"> <span class="campo_texto"> E-mail</span></i>
-        <input class="form_campo" type="email"> <br>
+        <i class="fa-solid fa-envelope"> <span class="campo_texto"> E-mail</span></i>
+        <input class="form_campo" type="email" id="email"> <br>
       </div>
 
       <div>
-        <i class="fa-solid fa-circle-user" id="campo_login6"> <span class="campo_texto"> Username</span></i>
-        <input class="form_campo" type="text"> <br>
+        <i class="fa-solid fa-circle-user"> <span class="campo_texto"> Username</span></i>
+        <input class="form_campo" type="text" id="user"> <br>
       </div>
 
       <div>
-        <i class="fa-solid fa-lock" id="campo_login7"> <span class="campo_texto"> Senha</span></i>
-        <input class="form_campo" type="password"> <br>
+        <i class="fa-solid fa-lock"> <span class="campo_texto"> Senha</span></i>
+        <input class="form_campo" type="password" id="senha"> <br>
       </div>
 
 
       <button class="cadastro" type="submit"><span class="cadastro_texto">Cadastrar</span></button>
 
     </form>
-
+  <script src="src/cadastro.js" crossorigin="anonymous"></script>
   </body>
 
 </html>
