fix: html validator, remove coments

--- a/alterarsenha.html
+++ b/alterarsenha.html
@@ -2,28 +2,29 @@
 
 <html lang="PT-br">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Alterar Senha</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="estilo/alterarsenha.css">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <title>Alterar Senha</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="estilo/alterarsenha.css">
+</head>
 
 <body>
-    
-        <p class="titulo">Alterar Senha</p>
-        <div class="section">
-            <p class="subtitulo">Nova Senha</p>
-            <input class="form_campo" type="password" placeholder="Digite sua nova senha"><br>
-            <p class="subtitulo">Confirmar Senha</p>
-            <input class="form_campo" type="password" placeholder="Confirme sua nova senha">
+
+    <p class="titulo">Alterar Senha</p>
+    <div class="section">
+        <p class="subtitulo">Nova Senha</p>
+        <input class="form_campo" type="password" placeholder="Digite sua nova senha"><br>
+        <p class="subtitulo">Confirmar Senha</p>
+        <input class="form_campo" type="password" placeholder="Confirme sua nova senha">
         <form action="index.html">
             <button class="alterar" type="submit"><span class="alterarsenha_texto">Alterar senha</span></button>
-        </div>
-    </form>
-
-    <script src="src/validarSenha.js"></script>
+        </form>
+    </div>
+        <script src="src/validarSenha.js"></script>
 
 </body>
