--- a/historico.html
+++ b/historico.html
@@ -47,69 +47,7 @@
                 <span>Ranqueada</span>
             </div>
         </div>
-        <div id="history-game-list" class="history-game-list">
-            <!--
-            <div class="history-game-item">
-                <div class="icon-text-title-victory">
-                    <img src="imagens/bandeira.png" alt="ícone bandeira" class="game-icon">
-                    <p class="list-game-status">Vitória</p>
-                </div>
-                <div class="icon-text-game-item">
-                    <img src="imagens/timer-icon.png" alt="ícone timer" class="game-icon">
-                    <p class="list-game-status">xx:xx</p>
-                </div>
-                <div class="icon-text-game-item">
-                    <p class="list-game-status">xx:xx</p>
-                    <img src="imagens/seta-baixo.png" alt="ícone seta" class="seta">
-                </div>
-            </div>
-
-            <div class="history-game-item">
-                <div class="icon-text-title-victory">
-                    <img src="imagens/bandeira.png" alt="ícone bandeira" class="game-icon">
-                    <p class="list-game-status">Vitória</p>
-                </div>
-                <div class="icon-text-game-item">
-                    <img src="imagens/timer-icon.png" alt="ícone timer" class="game-icon">
-                    <p class="list-game-status">xx:xx</p>
-                </div>
-                <div class="icon-text-game-item">
-                    <p class="list-game-status">xx:xx</p>
-                    <img src="imagens/seta-baixo.png" alt="ícone seta" class="seta">
-                </div>
-            </div>
-
-            <div class="history-game-item">
-                <div class="icon-text-title-victory">
-                    <img src="imagens/bandeira.png" alt="ícone bandeira" class="game-icon">
-                    <p class="list-game-status">Vitória</p>
-                </div>
-                <div class="icon-text-game-item">
-                    <img src="imagens/timer-icon.png" alt="ícone timer" class="game-icon">
-                    <p class="list-game-status">xx:xx</p>
-                </div>
-                <div class="icon-text-game-item">
-                    <p class="list-game-status">xx:xx</p>
-                    <img src="imagens/seta-baixo.png" alt="ícone seta" class="seta">
-                </div>
-            </div>
-
-            <div class="history-game-item">
-                <div class="icon-text-title-defeat">
-                    <img src="imagens/bandeira.png" alt="ícone bandeira" class="game-icon">
-                    <p class="list-game-status">Derrota</p>
-                </div>
-                <div class="icon-text-game-item">
-                    <img src="imagens/timer-icon.png" alt="ícone timer" class="game-icon">
-                    <p class="list-game-status">xx:xx</p>
-                </div>
-                <div class="icon-text-game-item">
-                    <p class="list-game-status">xx:xx</p>
-                    <img src="imagens/seta-baixo.png" alt="ícone seta" class="seta">
-                </div>
-            </div>
-            -->
-        </div>
+        <div id="history-game-list" class="history-game-list"></div>
 
     </div>
 
