fix: login css and meusdados html validator

--- a/meusdados.html
+++ b/meusdados.html
@@ -20,17 +20,17 @@
 
       <div>
         <i class="fa-solid fa-user" > <span class="campo_texto"> Nome completo</span></i>
-        <div class="form_campo" id="campo_login1" type="text"></div> <br>
+        <div class="form_campo" id="campo_login1"></div> <br>
       </div>
 
       <div>
         <i class="fa-regular fa-calendar-days"> <span class="campo_texto"> Data de nascimento</span></i>
-        <div class="form_campo" id="data_nascimento" type="text"></div> <br>
+        <div class="form_campo" id="data_nascimento"></div> <br>
       </div>
 
       <div>
         <i class="fa-solid fa-file-signature" > <span class="campo_texto"> CPF</span></i>
-        <div class="form_campo" id="cpf" type="text"></div> <br>
+        <div class="form_campo" id="cpf"></div> <br>
       </div>
 
       <div class="campo_lapis">
