feat: create board

--- a/partida.html
+++ b/partida.html
@@ -17,6 +17,7 @@
       window.location.href = 'index.html';
     }
   </script>
+   <script src="src/partida.js"></script>
 </head>
 
 <body>
@@ -60,7 +61,8 @@
             <p>Tempo: XX:XX</p>
           </div>
 
-          <img class="board-img" src="imagens/campominado.png" alt="Imagem campo">
+          <div class="board"></div>
+          <!-- <img class="board-img" src="imagens/campominado.png" alt="Imagem campo"> -->
 
       </div>
 
@@ -77,6 +79,7 @@
 
 
   </div>
+
 
 </body>
 
