--- a/iniciar.html
+++ b/iniciar.html
@@ -11,19 +11,11 @@
         href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="estilo/iniciar.css">
-    <script>
-        function goBack() {
-            window.location.href = 'index.html';
-        }
-        function startGame() {
-            window.location.href = 'partida.html';
-        }
-    </script>
 </head>
 
 <body>
     <header class="nav">
-        <div class="perfil-usuario">
+        <div class="perfil-usuario" onclick="myData()">
             <img class="logo-user" src="imagens/perfil.png" alt="Imagem perfil">
             <span class="perfil_texto">Olá, {username}</span>
         </div>
@@ -52,34 +44,41 @@
             </a>
         </div>
 
-
-
         <div class="game-settings-container">
 
             <div class="area_iniciar">
 
                 <div class="item-iniciar">
                     <span class="perfil_texto">Dimensão</span>
-                    <span class="simbolo_menos">-</span><input type="range" min="10" max="100" value="10"><span
-                        class="simbolo_mais">+</span>
+                    <span class="simbolo_menos">-</span>
+                    <input type="range" min="10" max="20" value="10" id="dimensao" oninput="updateBombs()">
+                    <span class="simbolo_mais">+</span>
+                    <span id="dimensaoValue">10</span>
                 </div>
 
                 <div class="item-iniciar">
                     <span class="perfil_texto">N° Bombas</span>
-                    <span class="simbolo_menos">-</span><input type="range" min="10" max="100" value="10"><span
-                        class="simbolo_mais">+</span>
+                    <span class="simbolo_menos">-</span>
+                    <input type="range" min="5" max="200" value="5" id="bombas" oninput="updateBombasValue()">
+                    <span class="simbolo_mais">+</span>
+                    <span id="bombasValue">200</span>
                 </div>
 
                 <div class="item-iniciar">
                     <span class="perfil_texto">Modalidade</span>
                     <div class="selection-mode">
-                        <!-- TODO: arrumar classe yellow. Está diferente apenas para demonstração-->
-                        <button class="game-mode-yellow" type="button"><span
-                                class="game-mode-text">Normal</span></button>
-                        <button class="game-mode" type="button"><span class="game-mode-text">Rivotril</span></button>
-                        <button class="game-mode" type="button"><span class="game-mode-text">Rankeada</span></button>
+                        <button class="game-mode" type="button">
+                            <span class="game-mode-text">Normal</span>
+                        </button>
+                        <button class="game-mode" type="button">
+                            <span class="game-mode-text">Rivotril</span>
+                        </button>
+                        <button class="game-mode" type="button">
+                            <span class="game-mode-text">Rankeada</span>
+                        </button>
                     </div>
                 </div>
+
                 <div class="bora-comecar">
                     <button class="start-game-button" type="button" onclick="startGame()"><span
                             class="start-game-text">Iniciar Jogo</span></button>
@@ -90,7 +89,7 @@
             </div>
         </div>
     </div>
-
+    <script src="./src/iniciar.js"></script>
 </body>
 
 </html>
