Fixing the position of labels.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
 
         <link rel="stylesheet" type="text/css" href="estilo/login.css">
         <script src="https://kit.fontawesome.com/5da4b5c12f.js" crossorigin="anonymous"></script>
-       
-
     </head>
 
     <body>
@@ -27,14 +25,13 @@
 
             <p>Iniciar sessão</p> <br>
             
-            <i class="fa-solid fa-user"> <span class="campo_texto">Username</span></i>
+            <i id="campo_login1" class="fa-solid fa-user"> <span class="campo_texto">Username</span></i>
             <input id="username" class="form_campo" type="text"> <br>
 
-            <i class="fa-solid fa-lock"> <span class="campo_texto">Senha</span></i>
+            <i id="campo_login2" class="fa-solid fa-lock"> <span class="campo_texto">Senha</span></i>
             <input id="password" class="form_campo" type="password"> <br>
 
             <button type="submit" class="login"><span class="login_texto">Entrar</span></button>
-
 
         </form>
 
