feat: timer - normal game

--- a/partida.html
+++ b/partida.html
@@ -58,7 +58,7 @@
             <p>Modo: clássico</p>
             <p>Número de bombas: 5</p>
             <p>Dimensão: 5</p>
-            <p>Tempo: XX:XX</p>
+            <p id="timer">Tempo: 00:00</p>
           </div>
 
           <div class="board"></div>
