feat: header configs, timer settings

--- a/partida.html
+++ b/partida.html
@@ -55,9 +55,9 @@
       <div class="game-settings-container">
 
           <div class="board-title">
-            <p>Modo: clássico</p>
-            <p>Número de bombas: 5</p>
-            <p>Dimensão: 5</p>
+            <p id="game-mode">Modo: clássico</p>
+            <p id="number-mines">Número de bombas: 5</p>
+            <p id="dimension">Dimensão: 5</p>
             <p id="timer">Tempo: 00:00</p>
           </div>
 
