feat: script module type

--- a/partida.html
+++ b/partida.html
@@ -4,12 +4,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Iniciar jogo</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap"
-    rel="stylesheet">
+  <title>Campo Minado</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap"
+      rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="estilo/partida.css">
   <script src="https://kit.fontawesome.com/5da4b5c12f.js" crossorigin="anonymous"></script>
   <script>
@@ -17,7 +17,8 @@
       window.location.href = 'index.html';
     }
   </script>
-   <script src="src/partida.js"></script>
+   <script type="module" src="/src/partida.js"></script>
+   
 </head>
 
 <body>
