--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
         <link rel="stylesheet" type="text/css" href="estilo/login.css">
         <script src="https://kit.fontawesome.com/5da4b5c12f.js" crossorigin="anonymous"></script>
+        
+        <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.3/dist/sweetalert2.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.3/dist/sweetalert2.all.min.js"></script>
     </head>
 
     <body>
