--- a/iniciar.html
+++ b/iniciar.html
@@ -11,6 +11,8 @@
         href="https://fonts.googleapis.com/css2?family=Bungee&family=Cabin:ital,wght@0,400..700;1,400..700&family=Road+Rage&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="estilo/iniciar.css">
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.3/dist/sweetalert2.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.14.3/dist/sweetalert2.all.min.js"></script>
 </head>
 
 <body>
