feat: spy button

--- a/partida.html
+++ b/partida.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="partida-footer">
-        <div class="spy">
+        <div class="spy-button">
           <i class="fa-solid fa-eye-slash"></i>
           <p>Trapaça</p>
         </div>
